--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "engines": {
         "vscode": "^1.45.0"
     },
-    "icon": "images/icon.svg",
+    "icon": "images/icon.png",
     "categories": [
         "Themes"
     ],
